--- a/lab1/TF_Part1_Intro.ipynb
+++ b/lab1/TF_Part1_Intro.ipynb
@@ -94,10 +94,10 @@
       "execution_count": 8,
       "metadata": {
         "id": "tFxztZQInlAB",
-        "outputId": "bd616497-cd8a-447a-dc0a-60c985f43529",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bd616497-cd8a-447a-dc0a-60c985f43529"
       },
       "outputs": [
         {
@@ -131,10 +131,10 @@
       "execution_count": 9,
       "metadata": {
         "id": "oaHXABe8oPcO",
-        "outputId": "f5c54501-05d4-4c73-b3f0-c528712ba1ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f5c54501-05d4-4c73-b3f0-c528712ba1ae"
       },
       "outputs": [
         {
@@ -165,30 +165,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
-        "id": "tFeBBe1IouS3",
-        "outputId": "0a0dae17-d129-475c-8ada-d3b4b7822586",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        }
+        "id": "tFeBBe1IouS3"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (ipython-input-10-2135268709.py, line 4)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"/tmp/ipython-input-10-2135268709.py\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    matrix = # TODO\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "### Defining higher-order Tensors ###\n",
         "\n",
         "'''TODO: Define a 2-d Tensor'''\n",
-        "matrix = # TODO\n",
+        "matrix = tf.constant([[2,3],[10,12]])\n",
         "\n",
         "assert isinstance(matrix, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(matrix).numpy() == 2"
